<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center">
		<Button
			android:text="@string/insert"
			android:id="@+id/btnInsert"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<Button
			android:text="@string/update"
			android:id="@+id/btnUpdate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<Button
			android:text="@string/delete"
			android:id="@+id/btnDelete"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<Button
			android:text="@string/search"
			android:id="@+id/btnSearch"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<TableLayout
		android:id="@+id/TableLayout01"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="1">
			<TableRow
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<TextView
					android:text="@string/name"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>
				<EditText
					android:text=""
					android:id="@+id/etName"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:background="@android:drawable/editbox_background"/>
			</TableRow>
			<TableRow
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<TextView
					android:text="@string/phone"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>
				<EditText
					android:text=""
					android:id="@+id/etPhone"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:inputType="phone"	
					android:background="@android:drawable/editbox_background" />
			</TableRow>
			<TableRow
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<TextView
					android:text="@string/hotkey"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>
				<EditText
					android:text=""
					android:id="@+id/etHotkey"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:inputType="number"
					android:background="@android:drawable/editbox_background"/>
			</TableRow>
	</TableLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center">
		<Button
			android:text="@string/clear"
			android:id="@+id/btnClear"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		<Button
			android:text="@string/exit"
			android:id="@+id/btnExit"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

	</LinearLayout>
	<FrameLayout
			android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:background="#ffeeeeee">
			<ListView 		
					android:id="@+id/list"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"/>
	</FrameLayout>
</LinearLayout>
